clusters/groups/on-prem/in-cluster/k8s-definitions/albion-killbot/api/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtualservice
spec:
  gateways:
    - istio-ingress/global-gateway
  hosts:
    - albion-killbot-api.k8scicd.local
  http:
    - route:
      - destination:
          host: api
          port:
            number: 8080
